--- a/css-flags/styles.css
+++ b/css-flags/styles.css
@@ -1,8 +1,212 @@
-#body {
+/* _______FRANCE_____ */
 
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    height: 55px;
+.container-france {
+  display: flex;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+.container-france,
+.france-color-one {
+  background-color: #002495;
+  width: 300px;
+  height: 200px;
+}
+.container-france,
+.france-color-two {
+  background-color: #ffffff;
+  width: 300px;
+  height: 200px;
+}
+.container-france,
+.france-color-three {
+  background-color: #ed2938;
+  width: 300px;
+  height: 200px;
+}
 
+/* ______GERMANY_______ */
+
+.container-germany {
+  height: 100%;
+  width: 300px;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+
+.germany-color-one {
+  background-color: #000000;
+  width: 300px;
+  height: 66px;
+}
+
+.germany-color-two {
+  background-color: #de0002;
+  width: 300px;
+  height: 66px;
+}
+
+.germany-color-three {
+  background-color: #ffce00;
+  width: 300px;
+  height: 66px;
+}
+
+/* ______MADAGASCAR______ */
+.container-madagascar {
+  background-color: white;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+.container-madagascar,
+.right-madagascar {
+  display: inline-block;
+}
+.madagascar-color-one {
+  background-color: #ffffff;
+  width: 100px;
+  height: 196px;
+  display: inline-block;
+}
+
+.madagascar-color-two {
+  background-color: #fc3e32;
+  width: 196px;
+  height: 100px;
+}
+
+.madagascar-color-three {
+  background-color: #007e39;
+  width: 196px;
+  height: 100px;
+}
+
+/*____SWITZERLAND____  */
+
+.switzerland-color-one {
+  background-color: #ff0002;
+  height: 200px;
+  width: 300px;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+
+.switzerland-color-two {
+  background-color: white;
+  height: 145px;
+  width: 45px;
+  position: relative;
+  top: 30px;
+  left: 130px;
+}
+.switzerland-color-three {
+  background-color: white;
+  height: 45px;
+  width: 150px;
+  position: relative;
+  top: -65px;
+  right: -78px;
+}
+
+/* ____SWEDEN____ */
+
+.sweden-color-one {
+  background-color: #0269a6;
+  height: 200px;
+  width: 300px;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+.sweden-color-two {
+  background-color: #fecc00;
+  height: 50px;
+  position: relative;
+  bottom: -75px;
+}
+.sweden-color-three {
+  background-color: #fecc00;
+  height: 200px;
+  width: 50px;
+  position: relative;
+  left: 80px;
+  top: -50px;
+}
+/* ____GAMBIA_____ */
+.container-gambia {
+  height: 100%;
+  width: 300px;
+  background-color: white;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+
+.gambia-color-one {
+  background-color: #ce1127;
+  height: 70px;
+}
+.gambia-color-two {
+  background-color: #0d1d8b;
+  height: 30px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+.gambia-color-three {
+  background-color: #3b7827;
+  height: 70px;
+}
+
+/* ___JAPAN___ */
+.container-japan {
+  height: 200px;
+  width: 300px;
+  background-color: white;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+
+.japan-color-one {
+  background-color: red;
+  height: 110px;
+  width: 110px;
+  position: relative;
+  top: 42.5px;
+  left: 95.5px;
+  border-radius: 20rem;
+}
+
+/* ___NIGER___ */
+.container-niger {
+  height: 200px;
+  width: 300px;
+  background-color: white;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 10px;
+}
+.niger-color-one {
+  background-color: #e15307;
+  height: 60px;
+  position: relative;
+  top: 0px;
+}
+.niger-color-two {
+  background-color: #e15307;
+  height: 63px;
+  width: 63px;
+  border-radius: 20rem;
+  position: relative;
+  top: 10px;
+  left: 120px;
+}
+.niger-color-three {
+  background-color: #10af2a;
+  height: 60px;
+  position: relative;
+  top: 20px;
 }
