Update: Moms shopping list
- Completed the moms shopping list

- Added the JS for the button as well as tailored the website to look a little more appealing

--- a/moms-shopping-list-start/style.css
+++ b/moms-shopping-list-start/style.css
@@ -1,42 +1,75 @@
+body {
+  background: linear-gradient(to right, #ff6e7f, 
+#bfe9ff) fixed;
+  color: white;
+}
+
 .title {
-    text-align: center;
+  text-align: center;
 }
 
 .main {
-    border: 1px solid black;
-    width: 50%;
-    margin: auto;
+  border: 1px solid white;
+  width: 50%;
+  margin: auto;
 }
 
 #add-item {
-    border: 1px solid black;
+
+  border-radius: 10px;
 }
 
 .input {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 3px solid rgb(14, 158, 26);
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .label {
-    margin: 10px;
+  margin: 10px;
 }
 
-#list {
-    flex-direction: column;
-    display: flex;
+#item-list {
+  flex-direction: column;
+  display: flex;
 }
 
-#list > li{
-    list-style-type: none;
-    margin: 10px auto;
+#item-list > li {
+  margin: 10px auto;
+  list-style: numbers;
+  font-size: x-large;
+  color: white;
 }
 
-#list div {
-    margin-bottom: 10px;
-    text-align: center;
+#item-list div {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.deleteButton {
+  width: 30px;
+  height: 20px;
+  margin-left: 10px;
+  color: red;
+  border-radius: 5px;
+}
+.editButton {
+  width: 80px;
+  height: 20px;
+  margin-left: 10px;
+  border-radius: 5px;
+  
+}
+.saveButton {
+  margin-left: 10px;
+}
+.editItem {
+  margin-left: 10px;
+  color: grey;
+  border-radius: 5px;
+  
 }
