--- a/Level 2/simple-calculator/styles.css
+++ b/Level 2/simple-calculator/styles.css
@@ -1,17 +1,78 @@
-#body {
-
-   display: flex;
-    flex-direction: column;
-    background-image: linear-gradient(royalblue, peachpuff);
-    background-repeat: no-repeat;
-    height: 100vh;
-    align-items: center;
-
+.add {
+  background-color: rgb(54, 54, 219);
+  height: 40px;
+  width: 80px;
+  border-radius: 1rem;
+  color: white;
 }
-
-.style {
-
-    font-family: sans-serif;
-    color: white;
-
+.sub {
+  background-color: red;
+  height: 40px;
+  width: 90px;
+  border-radius: 1rem;
+  color: white;
+}
+.multi {
+  background-color: green;
+  height: 40px;
+  width: 90px;
+  border-radius: 1rem;
+  color: white;
+}
+div#addition {
+  background-color: blue;
+  font-size: larger;
+  font-weight: 500;
+  /* width: 80%; */
+}
+div#subtraction {
+  cursor: pointer;
+  background-color: red;
+  font-size: larger;
+  font-weight: 500;
+  /* width: 80%; */
+}
+div#multiplication {
+  background-color: green;
+  font-size: larger;
+  font-weight: 500;
+  /* width: 80%; */
+}
+input {
+  height: 25px;
+  justify-content: center;
+}
+form {
+  position: absolute;
+  left: 30%;
+  bottom: 30%;
+  border: solid black 2px;
+  border-radius: 8px;
+  text-decoration: none;
+}
+.addCol {
+  color: blue;
+  height: 30px;
+  border: solid blue;
+  list-style: none;
+}
+.subCol {
+  color: red;
+  height: 30px;
+  border: solid red;
+  list-style: none;
+}
+.multiCol {
+  color: green;
+  height: 30px;
+  border: solid green;
+  list-style: none;
+}
+.resultsHeading {
+  position: relative;
+  left: 25%;
+}
+li {
+  font-size: 30px;
+  margin-right: 15%;
 }
